--- a/.github/workflows/pyt.yaml
+++ b/.github/workflows/pyt.yaml
@@ -1,8 +1,11 @@
 name: Generate Experiment Plot
 
+# on:
+#     # - cron: '0 0 * * *'  # Run daily at midnight UTC
+#   workflow_dispatch:  # Allow manual triggering
+
 on:
-    # - cron: '0 0 * * *'  # Run daily at midnight UTC
-  workflow_dispatch:  # Allow manual triggering
+  workflow_dispatch:
 
 jobs:
   generate_plot:
